--- a/01-transitions/style.scss
+++ b/01-transitions/style.scss
@@ -1,4 +1,4 @@
-@import '../styles/base.scss';
+@import "../styles/base.scss";
 
 :root {
   --color-gray: #8c97b7;
@@ -22,9 +22,9 @@ body {
   grid-template-columns: 1fr auto;
   grid-template-rows: 1fr;
   grid-column-gap: 1rem;
-  grid-template-areas: 'input button';
-
+  grid-template-areas: "input button";
   --color: var(--color-gray);
+
   &:focus-within {
     --color: var(--color-blue);
   }
@@ -37,6 +37,7 @@ body {
   border: 2px solid var(--color);
   border-radius: 0.25rem;
   outline: none;
+  transition: border-color 0.2s linear;
 }
 
 .ui-button {
@@ -48,6 +49,13 @@ body {
   border-radius: 0.25rem;
   height: var(--input-height);
   background-color: var(--color);
+  transition: background-color 0.2s linear;
+  transition: opacity 0.1s linear;
+
+  &:hover {
+    cursor: pointer;
+    opacity: 0.8;
+  }
 }
 
 [data-show]:not([data-active]) {
