--- a/02-keyframes/style.scss
+++ b/02-keyframes/style.scss
@@ -1,4 +1,4 @@
-@import '../styles/base.scss';
+@import "../styles/base.scss";
 
 :root {
   --color-gray: #8c97b7;
@@ -25,9 +25,8 @@ body {
   grid-template-columns: 1fr auto;
   grid-template-rows: 1fr;
   grid-column-gap: 1rem;
-  grid-template-areas: 'input button';
-
-  // Add an animation here
+  grid-template-areas: "input button";
+  animation: slide-up ease-in-out 1s;
 
   --color: var(--color-gray);
   &:focus-within {
@@ -36,7 +35,7 @@ body {
 
   > .ui-input,
   > .ui-button {
-    // Add an animation here
+    animation: shake 0.2s linear;
   }
 }
 
@@ -48,6 +47,10 @@ body {
   border-radius: 0.25rem;
   outline: none;
   transition: inherit;
+
+  &:invalid:not(:focus) {
+    animation: shake 0.6s;
+  }
 }
 
 .ui-button {
@@ -71,9 +74,33 @@ body {
 }
 
 @keyframes slide-up {
-  // Add keyframes here
+  from {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  50% {
+    opacity: 1;
+  }
+  to {
+    transform: none;
+  }
 }
 
 @keyframes shake {
-  // Add a shake animation here
+  from,
+  to {
+    transform: none;
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(5%);
+  }
+  10%,
+  30%,
+  50%,
+  70% {
+    transform: translateX(-5%);
+  }
 }
