--- a/03-choreography/style.scss
+++ b/03-choreography/style.scss
@@ -1,4 +1,4 @@
-@import '../styles/base.scss';
+@import "../styles/base.scss";
 
 :root {
   --color-gray: #8c97b7;
@@ -8,6 +8,7 @@
   --transition-duration: 0.3s;
   --transition-easing: cubic-bezier(0.5, 0, 0.5, 1);
   --animation-duration: 0.8s;
+  --animation-delay: -0.4s;
 }
 body {
   display: flex;
@@ -25,7 +26,7 @@ body {
   grid-template-columns: 1fr auto;
   grid-template-rows: 1fr;
   grid-column-gap: 1rem;
-  grid-template-areas: 'input button';
+  grid-template-areas: "input button";
   transition: all var(--transition-duration) var(--transition-easing);
   will-change: transform;
 
@@ -38,14 +39,17 @@ body {
 
   > .ui-input,
   > .ui-button {
-    // Add animations here
+    animation: slide-up var(--animation-duration) var(--transition-easing);
+    animation-fill-mode: both;
   }
 
   > .ui-input {
-    // ...
+    animation-delay: calc(var(--animation-delay) + var(--animation-duration));
   }
   > .ui-button {
-    // ...
+    animation-delay: calc(
+      2 * calc(var(--animation-delay) + var(--animation-duration))
+    );
   }
 }
 
